manifests/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: SAP_NAMESPACE
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: SAP_NAMESPACE-ingress
  namespace: SAP_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: SAP_NAMESPACE-backoffice
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: "SAP_NAMESPACE-service"
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: SAP_NAMESPACE-service
  namespace: SAP_NAMESPACE
  labels:
    app: SAP_NAMESPACE-app
spec:
  type: NodePort
  selector:
    app: SAP_NAMESPACE-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SAP_NAMESPACE-deployment
  namespace: SAP_NAMESPACE
  labels:
    app: SAP_NAMESPACE-app
spec:
  replicas: REPLICAS
  selector:
    matchLabels:
      app: SAP_NAMESPACE-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: SAP_NAMESPACE-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: sap
        image: CONTAINER_IMAGE
        ports:
        - containerPort: 3000
        resources:
            requests:
              memory: "1000Mi"
              cpu: "500m"
            limits:
              memory: "2000Mi"
              cpu: "1000m"
